--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,19 +1,18 @@
 
 #title{
     background-color: #d8e3e7;
-    text-align: center;
     padding-bottom: 50px;
 }
 .container-fluid{
-    padding:10px;
+    padding:0px;
 }
 .navbar{
-    margin:0 auto;
-    overflow: hidden;
+    margin:auto;
+    /* overflow: hidden; */
     position: fixed;
     top: 0;
     width: 100%;
-    height: 80px;
+    padding: 25px;
     background-color: #000;
 }
 .nav-item{
@@ -25,8 +24,11 @@
 .row{
     margin-top:50px;
 }
+
 .tit{
-    margin-top: 130px;
+    margin-top: 0px;
+    padding-top: 150px;
+    text-align: center;
 }
 
 
